gogs-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gogs-ing
spec:
  rules:
    - host: gogs.k8s
      http:
        paths:
          - backend:
              serviceName: gogs-svc
              servicePort: 80
